--- a/sbmcs/config-server/src/main/resources/application.properties
+++ b/sbmcs/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/u15030378/spring-config.git
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.username=u15030378
+spring.cloud.config.server.git.password=Houtkop12
+spring.security.user.name=jannie
+spring.security.user.password=jannie1234
