--- a/sbmz/spring-boot-microservice-zuul/pom.xml
+++ b/sbmz/spring-boot-microservice-zuul/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>2.2.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.2.4.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
