--- a/sbmz/spring-boot-microservice-zuul/src/main/resources/application.properties
+++ b/sbmz/spring-boot-microservice-zuul/src/main/resources/application.properties
@@ -5,3 +5,8 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 zuul.routes.currencyConverter.url=http://localhost:8100/currency-converter-feign/
+spring.profiles.active=Development
+spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.username=jannie
+spring.cloud.config.password=jannie1234
+management.endpoints.web.exposure.include=*
